# NewtonXDSA

./: NewtonXDSA.code-workspace  package-lock.json
8592sdk/: package-lock.json
8592sdk/client/: 8592-client-1.0.0.tgz  newtonxdsa-client-1.0.0.tgz  package-lock.json  package.json
8592sdk/client/src/: client.ts
8592sdk/config_utils/: 8592-config_utils-1.0.0.tgz  index.ts  package-lock.json  package.json
8592sdk/config_utils/src/: config_functions.ts  config_types.ts
8592sdk/crons/: index.ts  package-lock.json  package.json
8592sdk/db/: package-lock.json  package.json
8592sdk/db/prisma/: schema.prisma
8592sdk/helpers/: package.json
8592sdk/sdk/: index.ts  package-lock.json  package.json
8592sdk/sdk/src/: base.ts  lightSDK.ts
8592sdk/season/: index.ts  package.json
8592sdk/types/: index.ts  newtonxdsa-types-1.0.0.tgz  package-lock.json  package.json
8592sdk/types/src/: Input.ts  TBA.ts  TBAMatch.ts  XDSATypes.ts  util.ts
8592sdk/utils/: index.ts
Aniline/: CMakeLists.txt  main.cpp
Aniline/content/shaders/default/: fragment.glsl  vertex.glsl
XDSAReference/: XDSA2Client.code-workspace  app.json  metro.config.js  package-lock.json  package.json
XDSAReference/8592sdk/helpers/: index.ts  (+1 more)
XDSAReference/app/: _layout.tsx
XDSAReference/components/: GamePieceImageSelector.tsx
XDSAReference/data/: client.ts  clientdata.ts
nasapage/: instrumentation.ts  next.config.mjs  package-lock.json  package.json  server.config.ts  tsconfig.json
nasapage/configurations/: xdsa_config.ts
nasapage/dbhandler/: dbhandler.ts
xdsaserver/: instrumentation.ts  package-lock.json  package.json
xdsaserver/configurations/: users.ts  xdsa_config.ts
(+38 files in other folders)
